k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site
  labels:
    app: personal-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-site
  template:
    metadata:
      labels:
        app: personal-site
    spec:
      containers:
      - name: personal-site
        image: gcr.io/agile-terra-275621/personal-site
        ports:
        - containerPort: 80
