k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tooling
  labels:
    app: personal-site
  name: personal-site
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: personal-site
