k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: personal-site-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - niraj-fonseka.com
    secretName: poc-helm3-bluekiri-tech-tls
  rules:
  - host: niraj-fonseka.com
    http: 
      paths:
      - path: /
        backend:
          serviceName: personal-site
          servicePort: 80
